# GAP

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  GAP_STATUS_REVIEW.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_audit_logs.py  003_oauth_github.py  004_notifications.py  005_custom_metrics.py  006_scheduled_exports.py
dashboard/: README.md  package-lock.json  package.json  vitest.config.ts
dashboard/src/: App.tsx  main.tsx
src/: cache.py  config.py  database.py  logging_config.py  main.py  middleware.py
src/api/: filters.py  router.py
src/audit/: router.py  schemas.py  service.py
src/auth/: dependencies.py  router.py  service.py
src/contributors/: router.py  schemas.py  service.py
src/exports/: __init__.py  csv.py  pdf.py  router.py  scheduler.py
src/github/: client.py  schemas.py
src/metrics/: engine.py  router.py  schemas.py  service.py
src/models/: __init__.py  api_key.py  audit_log.py  base.py  contributor.py  custom_metric.py  notification.py  report.py  scheduled_export.py  scheduled_job.py  snapshot.py  team_metrics.py  user.py  webhook_event.py
src/notifications/: manager.py  router.py  schemas.py  service.py
src/oauth/: router.py  schemas.py  service.py
src/reports/: __init__.py  activity.py  quality.py  releases.py  schemas.py
src/scheduler/: background.py  email.py  executor.py  (+3 more)
tests/: conftest.py  test_advanced_filters.py  test_audit.py  test_auth.py  test_background.py  test_cache.py  test_contributors.py  test_custom_metrics.py  test_database.py  test_export_scheduling.py  test_notifications.py  test_oauth.py  test_predictions.py  test_repo_permissions.py  test_schedule_templates.py  test_scheduler.py  test_security.py  test_teams.py  test_trends.py  test_webhook_replay.py  test_webhooks.py
(+40 files in other folders)
